@@ -1,11 +1,19 @@
+2009-01-29 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/win32/WIN32Server.m (-setPartentWindow:forChildWindow:),
+	* Source/x11/XGServerWindow.m (-setPartentWindow:forChildWindow:):
+	Implement new method.
+	* Source/cairo/CairoGState.m (-compositeGState:...): Adjust y
+	coordinate of point. 
+
 2009-01-25 Riccardo Mottola <rmottola@users.sf.net>
 
 	* Source/art/image.m: Fix for big-endiam machines
-	
 
 2009-01-24 Riccardo Mottola <rmottola@users.sf.net>
 
-	* Source/art/image.m: Optimized and correct handling of 16 bit in _get_8_bits()
+	* Source/art/image.m: Optimized and correct handling of 16 bit in
+	_get_8_bits() 
 	
 2009-01-17  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
